tests/algorithms/transpiler/CPP/machine_learning/apriori_algorithm.error
compile: exit status 1
/workspace/mochi/tests/algorithms/transpiler/CPP/machine_learning/apriori_algorithm.cpp:84:215: warning: multi-character character constant [-Wmultichar]
   84 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/machine_learning/apriori_algorithm.cpp:84:251: warning: multi-character character constant [-Wmultichar]
   84 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/machine_learning/apriori_algorithm.cpp: In function ‘std::vector<Itemset> apriori(const std::vector<std::vector<std::__cxx11::basic_string<char> > >&, int64_t)’:
/workspace/mochi/tests/algorithms/transpiler/CPP/machine_learning/apriori_algorithm.cpp:334:48: error: no match for ‘operator=’ (operand types are ‘std::vector<std::vector<std::__cxx11::basic_string<char> > >’ and ‘std::vector<std::vector<std::vector<std::__cxx11::basic_string<char> > > >’)
  334 |         itemset = prune(itemset, combos, length);
      |                                                ^
In file included from /usr/include/c++/13/vector:72,
                 from /workspace/mochi/tests/algorithms/transpiler/CPP/machine_learning/apriori_algorithm.cpp:4:
/usr/include/c++/13/bits/vector.tcc:210:5: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = std::vector<std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::vector<std::__cxx11::basic_string<char> > >]’
  210 |     vector<_Tp, _Alloc>::
      |     ^~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/vector.tcc:211:42: note:   no known conversion for argument 1 from ‘std::vector<std::vector<std::vector<std::__cxx11::basic_string<char> > > >’ to ‘const std::vector<std::vector<std::__cxx11::basic_string<char> > >&’
  211 |     operator=(const vector<_Tp, _Alloc>& __x)
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
In file included from /usr/include/c++/13/vector:66:
/usr/include/c++/13/bits/stl_vector.h:766:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::vector<_Tp, _Alloc>&&) [with _Tp = std::vector<std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::vector<std::__cxx11::basic_string<char> > >]’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:766:26: note:   no known conversion for argument 1 from ‘std::vector<std::vector<std::vector<std::__cxx11::basic_string<char> > > >’ to ‘std::vector<std::vector<std::__cxx11::basic_string<char> > >&&’
  766 |       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
      |                 ~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:788:7: note: candidate: ‘constexpr std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = std::vector<std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::vector<std::__cxx11::basic_string<char> > >]’
  788 |       operator=(initializer_list<value_type> __l)
      |       ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:788:46: note:   no known conversion for argument 1 from ‘std::vector<std::vector<std::vector<std::__cxx11::basic_string<char> > > >’ to ‘std::initializer_list<std::vector<std::__cxx11::basic_string<char> > >’
  788 |       operator=(initializer_list<value_type> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
